--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Login/Register</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/Login Screens/001/css/main.css">
-    <link rel="stylesheet" href="/Login Screens/001/css/reset.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/reset.css">
 
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- JS -->
-    <script src="/Login Screens/001/js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
 </head>
 <body>
     
